--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -100,7 +100,7 @@ by using the below method of assembling parts of a number:
   </TabItem>
 </Tabs>
 
-Add one of these before your noun and you have provided a quantity determiner (a
+Add one of these *before* your noun and you have provided a **quantity determiner** (a
 cardinal number).
 
 <HisyeoTabs>
@@ -113,12 +113,20 @@ indefinite article. Like the English article "a" or "an".
 
 ### Ordinal
 
-Place a numeral word as a regular modifier (after the head noun) and it will
-represent a relative position of an item in a sequence (an ordinal number).
+Place a numeral word after the nucleus (before, in the midst, or after other
+modifiers) and it will represent a relative position of an item in a sequence
+(an ordinal number).
 
 <HisyeoTabs>
   <p>lı nomü son xe sün ximol, ü süko noyo.&emsp;<em>"The third tree from the left is my favorite."</em></p>
   <p>noyo lı umo nonkü xe lı cok.&emsp;<em>"I was the fourth person to leave."</em></p>
+</HisyeoTabs>
+
+The position of the ordinal does cause a split in the grouping of nouns.
+
+<HisyeoTabs>
+    <p>noyo cöüfon mokon süwit kut xön onö.&emsp;<em>"You made the great first dessert."</em></p>
+    <p>noyo cöüfon mokon süwit xön kut onö.&emsp;<em>"You made the first great dessert."</em></p>
 </HisyeoTabs>
 
 ### Multiplier
@@ -133,7 +141,8 @@ represent the number of times something is to be multiplied.
 
 ### Adverbial
 
-Use the same form as above but with the manner marker to get adverbial numerals.
+Place a numeral word after the manner/material thematic role marker (<HisyeoWord is='öni'/>) and
+you get adverbial numerals.
 
 <HisyeoTabs>
   <p>noyo bı öni kut tölki mokon si biek botuk yë öni mulö&emsp;<em>"I have only once eaten pizza"</em></p>
@@ -165,7 +174,7 @@ noun-phrase. You prefix a quantity phrase with <HisyeoWord is='xokön'/>.
 
 <HisyeoTabs>
     <p>noyo ke döstoc son fun son dus tiü icwon noyo.&emsp;<em>I will receive three thirty-fifths of my inheritance.</em></p>
-    <p>fiki yë sobüni et onö lı si niök bı son ün kut fun son.&emsp;<em>The disease rate has increased by 3 and one-third.</em></p>
+    <p>fiki yë sobüni et onö lı si niök lon son ün fun son.&emsp;<em>The disease rate has increased by 3 and one-third.</em></p>
 </HisyeoTabs>
 
 ## Relative
@@ -186,71 +195,40 @@ exact numerical quantity the noun actually is.
   <p><strong>zero/none:</strong>&emsp;xünyu yë düi umo lı sumon.&emsp;<em>No two people are the same.</em></p>
 </HisyeoTabs>
 
-There's also the universal classifications of "every" and "each". These allow
-for more specific and complex logical statements.
+There's also the universal classifications of "every" and "each". The former is
+used for speaking of a group as a whole and the latter is used for speaking of
+each individual within a group.
 
-<Tabs groupId="boböun-kon-cukto" queryString>
-    <TabItem value="latin" label="Latin" default>
-        <ul>
-          <li><strong></strong>: </li>
-          <li><strong></strong>: </li>
-          <li><strong></strong>: </li>
-          <li><strong></strong>: </li>
-        </ul>
-    </TabItem>
-    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-        <ul>
-          <li><strong></strong>: </li>
-          <li><strong></strong>: </li>
-          <li><strong></strong>: </li>
-          <li><strong></strong>: </li>
-        </ul>
-    </TabItem>
-</Tabs>
+<HisyeoTabs>
+    <p>küu lı gufıs yë fos nimü xüsten xokön xolu bı xön.&emsp;<em>Make sure you wash each bowl well.</em></p>
+    <p>binton lono onö lı lö bı cën hoi xokön lono hëlxun ün lı lö bı sël hoi xokön bıtün.&emsp;<em>The sun comes up each morning and sets each night.</em></p>
+    <p>möi umo xe hoi küncën onö, di si totsı ün hoküxı.&emsp;<em>Every person in the room stood and cheered.</em></p>
+</HisyeoTabs>
 
+:::info Interplay with location and duration thematic relations
 
-Then there is the relative quantities about position in a sequence. Whether that
-sequence be positional or time.
+Using these with the location/time thematic relation (<HisyeoWord is='hoi'/>) and
+the distance/duration thematic relation (<HisyeoWord is='lon'/>) has subtle
+differences in interpretations.
 
-<Tabs groupId="boböun-kon-cukto" queryString>
-    <TabItem value="latin" label="Latin" default>
-        <ul>
-          <li><strong></strong>: </li>
-          <li><strong></strong>: </li>
-          <li><strong></strong>: </li>
-          <li><strong></strong>: </li>
-        </ul>
-    </TabItem>
-    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-        <ul>
-          <li><strong></strong>: </li>
-          <li><strong></strong>: </li>
-          <li><strong></strong>: </li>
-          <li><strong></strong>: </li>
-        </ul>
-    </TabItem>
-</Tabs>
+<HisyeoTabs>
+    <p>nü ke niltügu xe lı lö bı fiki, hoi 5 mönbılı xokön.&emsp;<em>"We will stop running at 5 miles"</em></p>
+    <p>nimü ke döstoc iskö hoi möi 5 mönbılı xokön.&emsp;<em>"You will get a drink every 5 miles"</em></p>
+    <p>ke lı öni lö fiki bësu hoi xokön 5 mönbılı xokön.&emsp;<em>"There will be a different runner each 5 miles" </em></p>
+    <p>nü ke lı lö bı fiki lon 5 mönbılı xokön.&emsp;<em>"We will run for 5 miles"</em></p>
+    <p>ke lı öni lö fiki bësu lon möi 5 mönbılı xokön.&emsp;<em>"There will be a different runner for every 5 mile stretch"</em></p>
+    <p>nimü ke döstoc iskö dizel lon xokön 5 mönbılı xokön.&emsp;<em>"You get another drink for each 5 mile stretch"</em></p>
+</HisyeoTabs>
+
+:::
 
 Lastly, there are relative quantities that refer to the speakers feelings that
 the quantity is an adequate amount for their purposes.
 
-<Tabs groupId="boböun-kon-cukto" queryString>
-    <TabItem value="latin" label="Latin" default>
-        <ul>
-          <li><strong></strong>: </li>
-          <li><strong></strong>: </li>
-          <li><strong></strong>: </li>
-          <li><strong></strong>: </li>
-        </ul>
-    </TabItem>
-    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-        <ul>
-          <li><strong></strong>: </li>
-          <li><strong></strong>: </li>
-          <li><strong></strong>: </li>
-          <li><strong></strong>: </li>
-        </ul>
-    </TabItem>
-</Tabs>
+<HisyeoTabs>
+    <p>noyo bı öhël iskö si zötëstö iskö kikölö ülzo hoi lono öfo.&emsp;<em>"I've already had enough coffee today."</em></p>
+    <p>nimü mokon si otıkon biek süwit hoi köndodü onö.&emsp;<em>"You ate too much cake at the party."</em></p>
+    <p>niün moskül lı büzök möfi hön xe hobiyö müt niün wohi.&emsp;<em>"He lacks the courage to tell her."</em></p>
+</HisyeoTabs>
 
 <HisyeoTooltip/>
