add more English dialects

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -102,9 +102,8 @@ write a few basic sentences.
 
 ### Sounds
 
-If you are interested in providing words for other dialects or languages, check
-out our [IPA pronunciation guide](lessons/first-steps#pronunciation) and submit
-a patch for the [below code](https://github.com/Hisyeo/Hisyeo.github.io/edit/main/docs/intro.mdx).
+For more details on the sounds including the IPA representation, check out our [pronunciation sub-lesson](lessons/first-steps#pronunciation) or
+the [phonology reference](reference/phonology).
 
 #### Vowels
 <Tabs groupId="tenkin-yë-yogö-lolü" queryString>
@@ -120,6 +119,30 @@ a patch for the [below code](https://github.com/Hisyeo/Hisyeo.github.io/edit/mai
          <li>ü as in l<b>o</b>se, thr<b>ou</b>gh</li>
       </ul>
    </TabItem>
+   <TabItem value="en_gb" label="British English" default>
+      <ul>
+         <li>o as in h<b>o</b>t or p<b>a</b>lm</li>
+         <li>ö as in g<b>oa</b>t or th<b>ou</b>ght</li>
+         <li>e as in b<b>e</b>d or c<b>e</b>ll</li>
+         <li>ë as in m<b>a</b>y or dr<b>a</b>pe</li>
+         <li>ı as in k<b>i</b>t or n<b>e</b>ar</li>
+         <li>i as in salt<b>y</b> or fl<b>ee</b>ce</li>
+         <li>u as in str<b>u</b>t or tr<b>u</b>ffle</li>
+         <li>ü as in g<b>oo</b>se, bl<b>u</b>e</li>
+      </ul>
+   </TabItem>
+   <TabItem value="en_au" label="Australian English" default>
+      <ul>
+         <li>o as in b<b>a</b>th or st<b>a</b>rt</li>
+         <li>ö as in s<b>u</b>re or th<b>ou</b>ght</li>
+         <li>e as in tr<b>a</b>p or b<b>a</b>d</li>
+         <li>ë as in dr<b>e</b>ss or squ<b>are</b></li>
+         <li>ı as in k<b>i</b>t or h<b>e</b>re</li>
+         <li>i as in happ<b>y</b> or h<b>ea</b>t</li>
+         <li>u as in c<b>u</b>p or <b>a</b>bout</li>
+         <li>ü as in g<b>oo</b>se, f<b>oo</b>t</li>
+      </ul>
+   </TabItem>
 </Tabs>
 
 #### Consonants
@@ -127,6 +150,46 @@ a patch for the [below code](https://github.com/Hisyeo/Hisyeo.github.io/edit/mai
    <TabItem value="en_us" label="US English" default>
       <ul>
          <li>h as in <b>h</b>am or <b>h</b>old</li>
+         <li>k as in <b>c</b>up or sti<b>ck</b></li>
+         <li>g as in <b>g</b>old or sna<b>g</b></li>
+         <li>t as in <b>t</b>ip or pu<b>tt</b></li>
+         <li>c as in <b>ch</b>ore or na<b>t</b>ure</li>
+         <li>s as in mi<b>s</b>t or i<b>c</b>e</li>
+         <li>x as in a<b>sh</b> or ra<b>t</b>ion</li>
+         <li>d as in <b>d</b>ig or ba<b>d</b> </li>
+         <li>z as in <b>j</b>og or a<b>g</b>e</li>
+         <li>b as in <b>b</b>ear or a<b>b</b>bey</li>
+         <li>f as in <b>f</b>ather or a<b>f</b>fluent</li>
+         <li>m as in la<b>m</b>b or <b>m</b>ineral</li>
+         <li>n as in <b>n</b>od or ba<b>n</b></li>
+         <li>w as in <b>w</b>eep or a<b>w</b>ake</li>
+         <li>l as in <b>l</b>inger or ba<b>ll</b>ad</li>
+         <li>y as in <b>y</b>earn or ma<b>y</b>o</li>
+      </ul>
+   </TabItem>
+   <TabItem value="en_gb" label="British English" default>
+      <ul>
+         <li>h as in <b>h</b>am or <b>h</b>igh</li>
+         <li>k as in <b>c</b>up or sti<b>ck</b></li>
+         <li>g as in <b>g</b>old or sna<b>g</b></li>
+         <li>t as in <b>t</b>ip or pu<b>tt</b></li>
+         <li>c as in <b>ch</b>ore or na<b>t</b>ure</li>
+         <li>s as in mi<b>s</b>t or i<b>c</b>e</li>
+         <li>x as in a<b>sh</b> or ra<b>t</b>ion</li>
+         <li>d as in <b>d</b>ig or ba<b>d</b> </li>
+         <li>z as in <b>j</b>og or a<b>g</b>e</li>
+         <li>b as in <b>b</b>ear or a<b>b</b>bey</li>
+         <li>f as in <b>f</b>ather or a<b>f</b>fluent</li>
+         <li>m as in la<b>m</b>b or <b>m</b>ineral</li>
+         <li>n as in <b>n</b>od or ba<b>n</b></li>
+         <li>w as in <b>w</b>eep or a<b>w</b>ake</li>
+         <li>l as in <b>l</b>inger or ba<b>ll</b>ad</li>
+         <li>y as in <b>y</b>earn or ma<b>y</b>o</li>
+      </ul>
+   </TabItem>
+   <TabItem value="en_au" label="Australian English" default>
+      <ul>
+         <li>h as in <b>h</b>am or <b>h</b>igh</li>
          <li>k as in <b>c</b>up or sti<b>ck</b></li>
          <li>g as in <b>g</b>old or sna<b>g</b></li>
          <li>t as in <b>t</b>ip or pu<b>tt</b></li>
