--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -120,40 +120,40 @@ be too difficult to differentiate.
 
 All example words are pronounced as in US English.
 
-##### o - open back unrounded vowel [ɑ]
+##### o - [open back unrounded vowel](https://en.wikipedia.org/wiki/Open_back_unrounded_vowel) [ɑ]
 - as in sl**o**t or f**a**ther
 - can also be other open vowels: [a], [ɶ], [ɒ], 
 
-##### ö - open-mid back rounded vowel [ɔ]
+##### ö - [open-mid back rounded vowel](https://en.wikipedia.org/wiki/Open-mid_back_rounded_vowel) [ɔ]
 - as in r**o**pe or Camb**o**dia
 - can also be other central and back rounded vowels: [ɞ], [ɵ], [o]
 - *slightly geminated*
 
-##### e - open-mid front unrounded vowel [ɛ]
+##### e - [open-mid front unrounded vowel](https://en.wikipedia.org/wiki/Open-mid_front_unrounded_vowel) [ɛ]
 - as in b**e**d or c**a**t
 - can also be other open-mid front vowels: [æ], [œ]
 
-##### ë - close-mid front unrounded vowel [e]
+##### ë - [close-mid front unrounded vowel](https://en.wikipedia.org/wiki/Close-mid_front_unrounded_vowel) [e]
 - as in m**a**y or f**a**ce
 - can also be rounded [ø]
 - *slightly geminated*
 
-##### ı - near-close near-front unrounded vowel [ɪ]
+##### ı - [near-close near-front unrounded vowel](https://en.wikipedia.org/wiki/Near-close_near-front_unrounded_vowel) [ɪ]
 - as in c**i**ty or w**i**ll
 - can be rounded [ʏ]
 - and the close central unrounded vowel [ɨ]
 - lastly, can be the close-mid central unrounded vowel [ɘ]
 
-##### i - close front unrounded vowel [i]
+##### i - [close front unrounded vowel](https://en.wikipedia.org/wiki/Close_front_unrounded_vowel) [i]
 - as in happ**y** or c**ei**ling
 - can also be rounded [y]
 - *slightly geminated*
 
-##### u - open-mid back unrounded vowel [ʌ]
+##### u - [open-mid back unrounded vowel](https://en.wikipedia.org/wiki/Open-mid_back_unrounded_vowel) [ʌ]
 - as in r**u**n or en**ou**gh
 - can also be other central and back undrounded vowels: [ə], [ɜ]. [ɐ], [ɤ]
 
-##### ü - close back rounded vowel
+##### ü - [close back rounded vowel](https://en.wikipedia.org/wiki/Close_back_rounded_vowel) [u]
 - as in l**o**se, thr**ou**gh
 - can also be other back rounded and unrounded vowels: [ʉ], [ɯ], [ʊ]
 - *slightly geminated*
@@ -161,68 +161,68 @@ All example words are pronounced as in US English.
 
 #### Consonants
 
-##### h - voiceless glottal fricative [h]
+##### h - [voiceless glottal fricative](https://en.wikipedia.org/wiki/Voiceless_glottal_fricative) [h]
 - as in **h**am or **h**old
 - can also be velar, pharyngeal, or uvular voiceless fricatives: [x], [ɣ], [ʁ], [ħ]
 
-##### k - voiceless velar plosive [k]
+##### k - [voiceless velar plosive](https://en.wikipedia.org/wiki/Voiceless_velar_plosive) [k]
 - as in **c**up or sti**ck**
 - can also be the uvular voiceless plosive [q]
 
-##### g - voiced velar plosive [g]
+##### g - [voiced velar plosive](https://en.wikipedia.org/wiki/Voiced_velar_plosive) [g]
 - as in **g**old or sna**g**
 - can also be the uvular voiced plosive [ɢ]
 
-##### t - voiceless dental/alveolar plosive [t]
+##### t - [voiceless dental/alveolar plosive](https://en.wikipedia.org/wiki/Voiceless_dental_and_alveolar_plosives) [t]
 - as in **t**ip or pu**tt**
 - can also be the retroflex equivalent [ʈ]
 
-##### c - voiceless postalveolar affricate [t͡ʃ]
+##### c - [voiceless postalveolar affricate](https://en.wikipedia.org/wiki/Voiceless_postalveolar_affricate) [t͡ʃ]
 - as in **ch**ore or na**t**ure
 - can also be alveolar or retroflex: [t͡ɕ], [ʈ͡ʂ]
 
-##### s - voiceless alveolar fricative [s]
+##### s - [voiceless alveolar fricative](https://en.wikipedia.org/wiki/Voiceless_alveolar_fricative) [s]
 - as in mi**s**t or i**c**e
 - can be either voiceless or voiced [z]
 
-##### x - voiceless postalveolar fricative [ʃ]
+##### x - [voiceless postalveolar fricative](https://en.wikipedia.org/wiki/Voiceless_postalveolar_fricative) [ʃ]
 - as in a**sh** or ra**t**ion
 - can be either voiceless or voiced [ʒ]
 
-##### d - voiced dental/alveolar plosive [d]
+##### d - [voiced dental/alveolar plosive](https://en.wikipedia.org/wiki/Voiced_dental_and_alveolar_plosives) [d]
 - as in **d**ig or ba**d** 
 - can also be the retroflex equivalent [ɖ]
 
-##### z - voiced postalveolar affricate [d͡ʒ]
+##### z - [voiced postalveolar affricate](https://en.wikipedia.org/wiki/Voiced_postalveolar_affricate) [d͡ʒ]
 - as in **j**og or a**g**e
 - can also be alveolar or retroflex: [d͡ʑ], [ɖ͡ʐ]
 
-##### b - voiced bilabial plosive [b]
+##### b - [voiced bilabial plosive](https://en.wikipedia.org/wiki/Voiced_bilabial_plosive) [b]
 - as in **b**rown or ji**b**
 - can be either voiced or voiceless [p]
 
-##### f - voiceless labiodental fricative [f]
+##### f - [voiceless labiodental fricative](https://en.wikipedia.org/wiki/Voiceless_labiodental_fricative) [f]
 - as in **f**ree or ba**ff**le
 - can be either voiceless or voiced [v]
 
-##### m - voiced bilabial nasal [m]
+##### m - [voiced bilabial nasal](https://en.wikipedia.org/wiki/Voiced_bilabial_nasal) [m]
 - as in la**m**b or **m**ineral
 - can be labio-dental [ɱ]
 
-##### n - voiced dental/alveolar nasal
+##### n - [voiced dental/alveolar nasal](https://en.wikipedia.org/wiki/Voiced_dental,_alveolar_and_postalveolar_nasals) [n]
 - as in **n**od or ba**n**
 - can be any other nasal: [ɳ], [ɲ], [ŋ], [ɴ]
 
-##### w - voiced labial–velar approximant [w]
+##### w - [voiced labial–velar approximant](https://en.wikipedia.org/wiki/Voiced_labial%E2%80%93velar_approximant) [w]
 - as in **w**eep or a**w**ake
 - try to avoid realizing as [ʋ] due to similarity to voiced labiodental fricative.
 
-##### l - voiced dental/alveolar lateral approximants [l]
+##### l - [voiced dental/alveolar lateral approximants](https://en.wikipedia.org/wiki/Voiced_dental,_alveolar_and_postalveolar_lateral_approximants) [l]
 - as in **l**inger or ba**ll**ad
 - can also be realized as retroflex [ɭ] or tap/flap [ɾ]
 - most rhotic phonemes are transliterated as this letter
 
-##### y - voiced palatal approximant [j]
+##### y - [voiced palatal approximant](https://en.wikipedia.org/wiki/Voiced_palatal_approximant) [j]
 - as in **y**earn or ma**y**o
 - especially when preceded by a lateral approximant, this phoneme can be
   realized as a palatal lateral approximant [ʎ]
