--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -227,4 +227,6 @@ All example words are pronounced as in US English.
 - especially when preceded by a lateral approximant, this phoneme can be
   realized as a palatal lateral approximant [ʎ]
 
+Check out the [phonology reference](../reference/phonology) for more details.
+
 <HisyeoTooltip />
