fix up conditionals and other verb page issues

--- a/docs/reference/word_types/verbs.mdx
+++ b/docs/reference/word_types/verbs.mdx
@@ -94,84 +94,105 @@ predicate occurring is dependent on some other circumstance that is either
 explicitly described or implied.
 
 <HisyeoTabs>
-    <p>hoi lono kut yë boxö kon bëüdo ü noyo monodo umo wohi xe bit di hünsüon noyo.&emsp;<em>On my first day at University, I met the woman who would become my wife.</em></p>
-    <p>hön fos noyo lı bilüs hoi xe köntësto oxon yoküntik, ü noyo bit cüdo fun düi muni müt küngiyo yöüli.&emsp;<em>If I won the lottery, I would give half the money to charity.</em></p>
+    <p>hön fos noyo bit lı bilüs hoi xe köntësto oxon yoküntik, ü noyo bit cüdo fun düi muni müt küngiyo yöüli.&emsp;<em>If I won the lottery, I would give half the money to charity.</em></p>
     <p>noyo bit yübik xe lı lö monodo.&emsp;<em>I would love to come and visit.</em></p>
     <p>küu dëko biek süwit yë sobölë xön ëto ze. noyo bit mokon möi ulyö bı mülü ze.&emsp;<em>Look at that yummy cake! I would eat that all up!</em></p>
     <p>noyo müt nimü bit sölü xe sityo bı koli.&emsp;<em>I would ask you all to sit down.</em></p>
     <p>noyo müt goniso fos niün lı si cok bı ılık.&emsp;<em>I would imagine that they have already left.</em></p>
-    <p>niün lı köxentë yë mefüs oxon fos niün bit bunyentoc si xe besol zınkon.&emsp;<em>He's very security-conscious, so he would have remembered to lock the door.</em></p>
+    <p>hön fos niün lı köxentë yë mefüs ü niün bit bunyentoc si xe besol zınkon onö.&emsp;<em>He's very security-conscious, so he would have remembered to lock the door.</em></p>
     <p>niün bit lı gö hoi sınsi Lundun bı ibüdü cokyen.&emsp;<em>They would be arriving in London round about now.</em></p>
 </HisyeoTabs>
 
 :::info The different conditional classifications of English
 
-In English, conditionals are broken down into types known as zero conditional,
-first conditional (or conditional I), second conditional (or conditional II),
-third conditional (or conditiona III), and mixed conditional. These different
-types are created with different tenses and auxiliaries in English and a similar
-differentiation of syntax occurs in Hisyëö.
+In English, conditionals are broken down into four types. These different types
+are created with different tenses and auxiliaries in English and a similar
+differentiation of syntax occurs in what markers you use in Hisyëö. Regardless
+of what marker is on the *consequent* clause, the *antecedent* clause always
+uses a conditional verb marker (<HisyeoWord is='bit'/>).
 
-- **Zero conditional**: These conditionals are sentences that express a factual
-  implication instead of a hypothetical or potential future circumstance. They
-  do not use the conditional verb marker and either utilize the context marker (<HisyeoWord is='hön'/>)
-  or the time marker (<HisyeoWord is='hoi'/>) to indicate the condition.
+#### Implicative (Zero Conditional)
+These conditionals are sentences that express a factual implication instead of a
+hypothetical or potential future circumstance. This type of conditional does not
+use the conditional verb marker in the *consequent* clause and utilizes one of
+the thematic role markers to mark the *antecedent* clause. As stated above, the
+conditional verb marker is present in the antecedent verb phrase.
 
 <HisyeoTabs>
-    <p>hön fos gongoxi öitun, lı mötö hoi boxö yë limien ilë.&emsp;<em>If the alarm goes off, there's a fire somewhere in the building.</em></p>
-    <p>hön fos nimü lı ëo foüt, umo fısun ëo ölë nimü.&emsp;<em>If you make a mistake, someone lets you know.</em></p>
+    <p>hön fos gongoxi onö bit öitun, lı mötö hoi boxö yë limien ilë onö.&emsp;<em>If the alarm goes off, there's a fire somewhere in the building.</em></p>
+    <p>hoi fos bit lı xömütlö bökbün, ü noö onö lı cën.&emsp;<em>When the sea is stormy, the waves are high.</em></p>
 </HisyeoTabs>
 
-- **First conditional**: These conditionals are sentences thot regard the
-  consequences of a probable **future** event. They also do not use the
-  conditional verb marker and utilize the context marker (<HisyeoWord
-  is='hön'/>) or the time marker (<HisyeoWord is='hoi'/>) to indicate the
-  condition. The difference from Zero conditional sentences is the use of future
-  tense in the consequence. You can also use the perfective marker (<HisyeoWord
-  is='si'/>) or an imperative (<HisyeoWord is='küu'/>) on the consequence.
+---
+
+#### Predictive (First Conditional)
+These conditionals are sentences that regard the consequences of a probable
+**future** event. Like the Zero Conditional, they also do not use the
+conditional verb marker in the *consequent* clause and utilizes one of the
+thematic role markers to mark the *antecedent* clause. The difference from an
+First Conditional is the use of future tense in the consequent clause. Instead
+of the future tense marker, you can also use the deontic/imperative marker due
+to the added future meaning that is present there as well. When using the future
+tense marker on the *consuquent* clause, you can also use the perfective marker
+because it's still in the future just the event has ended or the state has been
+surpassed.
 
 <HisyeoTabs>
-    <p>hön fos niün sölü müt noyo, noyo ke fohoso bësnëhot niün bı diyondë ëto.&emsp;<em>If he asks me, I will consider his proposal carefully.</em></p>
-    <p>hön fos nimü lı ëo foüt, umo ke fısun ëo ölë nimü.&emsp;<em>If you make a mistake, someone will let you know.</em></p>
-    <p>hoi hüzon yë lono mutyu cıhöü küu lı lö müt boxö noyo.&emsp;<em>If it rains this afternoon, come round to my place!</em></p>
-    <p>hön fos nimü lı cok ibüdü, nimü ke monodo&emsp;<em>If you leave now, you will still catch your train.</em></p>
+    <p>hön fos niün bit sölü müt noyo, ü noyo ke fohoso bësnëhot niün bı diyondë ëto.&emsp;<em>If he asks me, I will consider his proposal carefully.</em></p>
+    <p>hön fos nimü bit lı ëo foüt, umo ke fısun ëo ölë nimü.&emsp;<em>If you make a mistake, someone will let you know.</em></p>
+    <p>hön fos bit lı hüzon cıhoü lono mutyu öfo, küu lı lö müt boxö noyo.&emsp;<em>If it rains this afternoon, come round to my place!</em></p>
+    <p>hön fos nimü bit lı cok hoi ibüdü, ü nimü ke doicël oütö kiskö nimü löicök.&emsp;<em>If you leave now, you will still catch your train.</em></p>
 </HisyeoTabs>
 
-- **Second conditional**: These conditionals are sentences used to describe
-  hypothetical, and typically counterfactual, situations in the **present** or
-  **future** tense.
+---
+
+#### Hypothetical (Second Conditional)
+
+These conditionals are sentences used to describe hypothetical, and typically
+counterfactual, situations in the **present** or **future** tense. These
+sentences do use the conditional verb marker (<HisyeoWord is='bit'/>) on the
+*consequent* clause. To encode a future tense on the *consequent* clause, you
+can either just drop to the First Conditional or use an adverb phrase with <HisyeoWord is='mile'/>. Unlike
+in English, there's no need to encode the past tense (subjunctive) on the antecedent clause.
 
 <HisyeoTabs>
-    <p>hön fos noyo süko köndodü, ü noyo bit lı gö hoi eswen niün.&emsp;<em>If I liked parties, I would attend more of them.</em></p>
-    <p>hön fos lı hüzon hoi lono uklo, ü umo bit lı cıfulo hoi titon.&emsp;<em>If it rained tomorrow, people would dance in the street.</em></p>
-    <p>hön fos nimü lı cok bı ibüdü, ü nimü bı gufıs bit doicël oütö kiskö nimü.&emsp;<em>If you left now, you would still catch your train.</em></p>
+    <p>hön fos noyo bit süko köndodü, ü noyo bit lı gö hoi eswen niün.&emsp;<em>If I liked parties, I would attend more of them.</em></p>
+    <p>hön fos bit lı hüzon hoi lono uklo, ü umo bit lı cıfulo hoi titon onö.&emsp;<em>If it rained tomorrow, people would dance in the street.</em></p>
+    <p>hön fos nimü bit lı cok bı ibüdü, ü nimü bit doicël oütö kiskö nimü löicök.&emsp;<em>If you left now, you would still catch your train.</em></p>
 </HisyeoTabs>
 
-- **Third conditional**: These conditionals are sentences used to describe
-  hypothetical, and typically counterfactual, situations in the **past** tense.
-  The condition clause is in the past perfect and the consequence is in
-  conditional perfect.
+---
+
+#### Past Hypothetical (Third Conditional)
+
+These conditionals are sentences used to describe hypothetical, and typically
+counterfactual, situations in the **past** tense. Like the Second Conditional,
+the *consequent* clause is using the conditional verb marker (<HisyeoWord is='bit'/>) but
+in addition to that, it is also using either the perfective marker or another
+thematic constituent is indicating that this clause is in the past tense.
 
 <HisyeoTabs>
-    <p>hön fos nimü xokülü si noyo, ü noyo bit lı si lö.&emsp;<em>If you had called me, I would have come.</em></p>
-    <p>niün bit lı si bilüs hön fos noyo lı si yöüli müt niün.&emsp;<em>Would he have succeeded if I had helped him?</em></p>
+    <p>hön fos nimü bit xokülü si noyo, ü noyo bit lı si lö.&emsp;<em>If you had called me, I would have come.</em></p>
+    <p>niün bit lı si bilüs hön fos noyo bit lı si yöüli müt niün ko.&emsp;<em>Would he have succeeded if I had helped him?</em></p>
 </HisyeoTabs>
 
-- **Mixed conditional**: These conditionals are a mixture of the second and
-  third classifications. Either the condition or the consequence, but not both,
-  has a past time reference. When the condition refers to the past, but the
-  consequence to the present, the condition clause is in the past perfect (as
-  with the Third conditional), while the main clause is in the conditional mood
-  (as in the Second conditional). When the consequence refers to the past, but
-  the condition is not expressed as being limited to the past, the condition
-  clause is expressed as in the second conditional (past, but not past perfect),
-  while the main clause is in the conditional perfect (as in the third
-  conditional).
+---
+
+#### Mixed Conditional
+
+These conditionals are a mixture of the second and third classifications. Either
+the antecedent or the consequent clause, but not both, has a past time
+reference. When the antecedent clause refers to the past, but the consequent
+clause to the present, the condition clause is in the like that of the Third
+conditional, while the main clause is like that of the Second conditional. When
+the consequent clause refers to the past, but the antecedent clause is not
+expressed as being limited to the past, the antecedent clause is expressed as in
+the Second Conditional, while the main clause is like the Third Conditional.
 
 <HisyeoTabs>
-    <p>hön fos nimü tüu si wëloı bı dündon, nü bit yünyoü yök ixölö öfo bı ibüdü.&emsp;<em>If you had done your job properly, we wouldn't be in this mess now.</em></p>
-    <p>hön fos noyo lı si ëo hünsüon ölë umo Keli, noyo bit niwos yök hoi küöcyo Elvu bı ibüdü.&emsp;<em>If I hadn't married Kelly, I wouldn't be living in Scotland now.</em></p>
-    <p>hön fos nü lı umo güexo bı ılik, nü bit tüu si yök nı mıslı ulyö.&emsp;<em>If we were soldiers, we wouldn't have done it like that.</em></p>
+    <p>hön fos nimü bit tüu si wëloı bı dündon, nü bit yünyoü yök ixölö öfo bı ibüdü.&emsp;<em>If you had done your job properly, we wouldn't be in this mess now.</em></p>
+    <p>hön fos noyo bit lı si ëo hünsüon ölë umo Keli, noyo bit niwos yök hoi küöcyo Elvu bı ibüdü.&emsp;<em>If I hadn't married Kelly, I wouldn't be living in Scotland now.</em></p>
+    <p>hön fos nü bit lı umo güexo bı öhël, nü bit tüu si yök nı mıslı ulyö.&emsp;<em>If we were soldiers, we wouldn't have done it like that.</em></p>
 </HisyeoTabs>
 
 :::
@@ -181,7 +202,7 @@ differentiation of syntax occurs in Hisyëö.
 To indicate that something should be or ought to be, you would use the deontic
 verb marker (<HisyeoWord is='küu'/>). It indicates that the true state of things
 (realis) doesn't match what the speaker expects, believes or desires. A sentence
-with the deontic verb marker generally indicates what action could be taken to
+with the deontic verb marker generally indicates what action should be taken to
 rectify the state of things.
 
 <HisyeoTabs>
@@ -272,9 +293,9 @@ in the imperfective aspect.
 
 <HisyeoTabs>
     <p>noyo xüsten oütö.&emsp;<em>I wash the car.</em></p>
-    <p>noyo p'ılık xüstën oütö.&emsp;<em>I was washing the car.</em></p>
+    <p>noyo bı öhël xüstën oütö.&emsp;<em>I was washing the car.</em></p>
     <p>noyo xüstën si oütö.&emsp;<em>I washed the car.</em></p>
-    <p>noyo p'ılık xüstën si oütö.&emsp;<em>I had washed the car.</em></p>
+    <p>noyo bı öhël xüstën si oütö.&emsp;<em>I had washed the car.</em></p>
     <p>noyo ke xüstën oütö.&emsp;<em>I shall wash the car.</em></p>
     <p>noyo ke xüstën si oütö.&emsp;<em>I will have washed the car.</em></p>
 </HisyeoTabs>
