Add some more detail to the modifier reference

--- a/docs/reference/word_types/modifiers.mdx
+++ b/docs/reference/word_types/modifiers.mdx
@@ -40,6 +40,24 @@ the modifier particles above or a noun particle) is seen as applying meaning to
 the *entire* noun or verb phrase instead of only being applicable to the
 immediately preceding head phrase.
 
+This particle is also useful for ending a determiner-led phrase before a nucleus
+can be added thus making the determiner phrase headless which means that the
+determiner is instead interpreted pronomically. 
+
+:::caution Verb Immunity
+
+Verbs cannot be preceded by a collapsing head particle directly. This is because
+the collapsing head particle does not change the semantics of that syntactic
+position. It simply closes the prior elements as a new nucleus and then the
+syntactic context of the following word is as a modifier of that newly collapsed
+nucleus.
+
+If you need to describe the newly formed nucleus with a verb, you must use one
+of particles that converts a verb to a noun or modifier derivation.
+
+:::
+
+
 ## From...
 
 Converting from the other content types into modifiers.
@@ -51,15 +69,21 @@ to the noun (acting as a modifer) or shares some recognizable quality with the
 noun. Like the affix "-like" in English. One way of making a modifier out of a
 noun is to provide it as a word immediately following <HisyeoWord is="fın"/>.
 This has the effect of meaning "[noun]-like thing" in English. You can use it
-following any head noun or existing modifier chain.
+following any head noun or existing modifier chain (within a genitive phrase).
+
+That said, nouns often don't need any added particle, but when the noun is
+action-oriented, it can be useful to use the abstract noun particle (<HisyeoWord is="kon"/>) or
+the modifier particles above. This helps differentiate the attributed thing from
+being attributed directly to the action itself compared to things that are used
+*for* an action or are more tangentially related.
 
 
 ### Verbs
 
-A verb cannot act as a modifier, it must be preceded by either a modifier or a
-noun particle. The verb and particle combined act as one word of the base
-modifier type. You can use it following any head noun or existing modifier
-chain.
+A verb cannot act as a modifier, it must be preceded by either one of the
+modifier particles above or a [noun particle](nouns#verbs). The verb and particle combined act
+as one word of the base modifier type. You can use it following any head noun or
+existing modifier chain.
 
 
 ## Relative Clauses
