Added more relative clause detail

--- a/docs/reference/word_types/modifiers.mdx
+++ b/docs/reference/word_types/modifiers.mdx
@@ -90,26 +90,42 @@ existing modifier chain.
 
 You can modify a preceding verb or noun phrase by using one of the relative
 clause particles:
+
 <HisyeoTabs>
     <p>xe - <em>Use this one when the subject is shared from the outer sentence</em></p>
     <p>fos - <em>Use this one when the subject is changed from the outer sentence</em></p>
 </HisyeoTabs>
 
-When you use the second form (<HisyeoWord is="fos"/>), you must provide at least
-one constituent that refers to the verb or noun phrase, this is called the
-**resumptive phrase**. Hisyëö uses the demonstratives as resumptive pronouns
-within resumptive phrases. Use the proximal demonstrative
-(<HisyeoWord is="öfo"/>) when referring to the speaker or objects that the
-speaker possesses, use the medial demonstrative (<HisyeoWord is="ulyö"/>)
-when referring to the person being addressed or objects possesed by that person,
-use the distal demonstrative (<HisyeoWord is="onö"/>) when referring to someone
-else other than the person being addressed or objects possessed by that third
-party.
+When you use the first form, the subject of the inner clause is linked to the
+nucleus that the relative clause is attached to.
 
 <HisyeoTabs>
-    <p>umo wohi xe nıwos hoi zınkon uklo, wëloi hoi sëdu muni.&emsp;<em>"The woman who lives next door works in a bank."</em></p>
-    <p>öfo lı non fos noyo fölun xe möniso öfo müt nimü.&emsp;<em>"This is the video that I wanted to show you."</em></p>
-    <p>lı yöüli ëto ü umo fos niün bı ılık köto onö.&emsp;<em>"The person they spoke to was really helpful."</em></p>
+    <p>umo wohi xe nıwos hoi zınkon uklo hön noyo, wëloi hoi sëdu muni.&emsp;<em>"The woman who lives next door works in a bank."</em></p>
+</HisyeoTabs>
+
+When you use the second form (<HisyeoWord is="fos"/>), you must provide at least
+one constituent that refers to the nucleus noun phrase, this is called the
+**resumptive phrase**. The preferred resumptive phrase is the final constituent
+of the relative clause which is then dropped and implied to refer to the nucleus.
+
+<HisyeoTabs>
+    <p>umo fos noyo cüdo inboli müt, di si xe monodo.&emsp;<em>"The person that I gave a flower to came to visit."</em></p>
+    <p>niün lı umo fos dëko noyo ü.&emsp;<em>"They are the person who saw me."</em></p>
+    <p>ilë fos noyo niwos, lı nokdo ëto.&emsp;<em>"The house in which I live is very old."</em></p>
+    <p>güexo onö fos niün toswil si nënko, lı mülü löicök.&emsp;<em>"The war that he painted because of is finally over."</em></p>
+</HisyeoTabs>
+
+When you want to organize your relative clause in a topical manner, the
+demonstratives can act as resumptive pronouns. Use the proximal demonstrative (<HisyeoWord is="öfo"/>) when
+referring to the speaker or objects that the speaker possesses, use the medial
+demonstrative (<HisyeoWord is="ulyö"/>) when referring to the person being
+addressed or objects possesed by that person, use the distal demonstrative (<HisyeoWord is="onö"/>) when
+referring to someone else other than the person being addressed or objects
+possessed by that third party.
+
+<HisyeoTabs>
+    <p><b>öfo</b> lı non fos noyo fölun xe möniso <b>öfo</b> müt nimü.&emsp;<em>"This is the video that I wanted to show you."</em></p>
+    <p>lı si yöüli ëto ü umo <b>onö</b> fos niün köto si <b>onö</b>.&emsp;<em>"The person they spoke to was really helpful."</em></p>
 </HisyeoTabs>
 
 <HisyeoTooltip/>
